# MNT

./: .gitignore  CMakeLists.txt  Makefile  README.md  check.h  darboux.h  io.h
.github/workflows/: c-cpp.yml
input/: mini.mnt  small.mnt
scripts/: compare.sh
src/: darboux.c  darboux.h  darboux_seq.c  darboux_seq.h  io.c  io.h  main.c  type.h
